--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,37 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+:root {
+    --background: rgb(97, 189, 187);
+    --text-color: #76787a;
+    --button-color: #00a1ba;
 }
 
-body {
-    font-family: sans-serif;
-}
+/*******************************************************************************************************************************************************************************/
+/*************************************************************************************NAVBAR***********************************************************************************/
+/*******************************************************************************************************************************************************************************/
 
 .navbar {
     padding: 30px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
-    background-color: rgba(180, 181, 182, 0.048);
+    height: 10%;
+    background-color: rgba(180, 181, 182, 0.047);
 }
 
 .navbar a {
-    color: gray;
+    color: var(--text-color);
     font-size: 22px;
 }
 
 .navbar .logo {
     color: black;
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: bold;
+    margin-right: 7em;
+}
+
+.nav_links {
+    display: flex;
 }
 
 .navbar .nav_links ul {
@@ -42,20 +46,84 @@ body {
     display: none;
     position: absolute;
     right: 50px;
-    top: 50px;
+    top: 45px;
 }
+
+
+/*******************************************************************************************************************************************************************************/
+/*************************************************************************************CONTACT***********************************************************************************/
+/*******************************************************************************************************************************************************************************/
+
+.container {
+    background-color: var(--background);
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.form_container {
+    background: white;
+    margin: 7em auto auto auto;
+    padding: 36px;
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+}
+
+.form_container h2 {
+    margin-bottom: 36px;
+}
+
+.card {
+    padding-top: 16px;
+}
+
+.card ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.card ul li {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+    gap: 10px;
+}
+
+.card ul li input[type=text],.card ul li input[type=email]{
+    width: 50%;
+    height: 2em;
+    outline: none;
+    border: 0.5px solid rgba(0, 0, 0, 0.144);
+}
+
+.card ul li textarea {
+    height: 7em;
+    outline: none;
+    border: 0.5px solid rgba(0, 0, 0, 0.144);
+}
+
+.card ul li input[type=submit] {
+    display: flex;
+    justify-content: center;
+    border: none;
+    background-color: var(--button-color);
+    color: white;
+    width: 8%;
+    padding: 12px;
+    cursor: pointer;
+}
+
 
 @media screen and (max-width: 900px) {
     
+
     .navbar {
         padding: 0;
-        position: inherit;
     }
 
     .navbar .logo {
-        position: absolute;
-        top: 50px;
-        left: 50px;
+        margin: 1em;
         font-size: 2em;
         font-weight: bold;
     }
@@ -65,7 +133,7 @@ body {
         top: 0;
         right: 0;
         background-color: rgba(255, 255, 255, 0.20);
-        backdrop-filter: blur(2px);
+        backdrop-filter: blur(5px);
         width: 100%;
         height: 50vh;
         display: flex;
@@ -86,9 +154,25 @@ body {
     }
 
     .navbar .nav_links ul li {
-        margin: 25px 0;
+        padding: 20px 0;
         font-size: 1.2em;
+        border-bottom: 0.5px solid rgba(0, 0, 0, 0.308);
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+
+    .navbar .nav_links ul .user_connexion {
+        border-bottom: none;
+    }
+
+    .navbar .nav_links ul li a {
+        color: black;
+        font-weight: bold;
+        font-size: 1.5em;
+    }
+
 
     .navbar .menu-hamburger {
         display: block;
