--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,9 +183,7 @@
 /*******************************************************************************************************************************************************************************/
 
 .container {
-    background-image: linear-gradient(180deg,rgba(5, 0, 0, 0.171) 0%,rgba(5, 0, 0, 0.13)100%), url(../img/bg-hero-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: var(--background-blue);
     width: 100%;
     min-height: 100%;
     display: flex;
@@ -292,9 +290,7 @@
 /*******************************************************************************************************************************************************************************/
 
 .background {
-    background-image: linear-gradient(180deg,rgba(5, 0, 0, 0.171) 0%,rgba(5, 0, 0, 0.13)100%), url(../img/bg-hero-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: var(--background-blue);
     width: 100%;
     min-height: 100%;
     display: flex;
